--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@
 .App{
   margin: 5px;
   padding: 10px;
-  background-image: url(https://i.stack.imgur.com/wvNCf.png);
-  /* background-color: rgb(213, 134, 30); */
+  /* background-image: url(https://i.stack.imgur.com/wvNCf.png); */
+  background-color: rgb(49, 87, 94);
   color: white;
   font-weight: bold;
   text-align: center;
